# stanford-mcp

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  server.py
src/: __main__.py  app.py  auth.py  helpers.py
src/tools/: __init__.py  notification.py
src/tools/course_catalog/: __init__.py  course_catalog.py  filtering.py  formatting.py
src/tools/weather/: weather.py
