[project]
name = "stanford-mcp"
version = "0.1.0"
description = "A comprehensive MCP server for querying Stanford's course catalog, including the latest student course ratings."
readme = "README.md"
authors = [{ name = "Mark Music" }]

keywords = ["mcp", "llm", "stanford", "course-catalog", "fetch", "http", "streamable", "stateless"]
license = { text = "Apache 2.0" }

requires-python = ">=3.13"
dependencies = [
    "anyio>=4.10.0",
    "click>=8.2.1",
    "explorecourses>=1.0.6",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "starlette>=0.47.3",
    "uvicorn>=0.32.0",
]